# traj_eval

./: CMakeLists.txt  README.md  package.xml
intro_nodes/: CMakeLists.txt  package.xml
intro_nodes/src/: find_red_pixels.cpp  publisher.cpp  subscriber.cpp
src/: kimera_eval.cpp  loop_closure.cpp  msckf_eval.cpp  okvis_eval.cpp  pose_eval.cpp  pose_stamped.cpp  rovio_eval.cpp  svo_eval.cpp  vins_mono_eval.cpp
